--- a/index.html
+++ b/index.html
@@ -32,38 +32,29 @@
 
           <address class="header-address">
             <div class="header-address-container">
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg class="header-icons" width="32" height="32">
-                      <use
-                        href="./images/symbol-defs.svg#icon-telephone-receiver"
-                      ></use>
-                    </svg>
-                  </a>
-                  <!-- phone-icon -->
-                </li>
-                <li>
-                  <a href="#">
-                    <svg class="header-icons" width="32" height="32">
-                      <use
-                        href="./images/symbol-defs.svg#icon-uit_facebook-f"
-                      ></use>
-                    </svg>
-                  </a>
-                  <!-- facebook-icon -->
-                </li>
-                <li>
-                  <a href="#">
-                    <svg class="header-icons" width="32" height="32">
-                      <use
-                        href="./images/symbol-defs.svg#icon-ph_instagram-logo-light"
-                      ></use>
-                    </svg>
-                  </a>
-                  <!-- instagram-icon -->
-                </li>
-              </ul>
+              <a href="#">
+                <svg class="header-icons" width="32" height="32">
+                  <use
+                    href="./images/symbol-defs.svg#icon-telephone-receiver"
+                  ></use>
+                </svg>
+              </a>
+
+              <a href="#">
+                <svg class="header-icons" width="32" height="32">
+                  <use
+                    href="./images/symbol-defs.svg#icon-uit_facebook-f"
+                  ></use>
+                </svg>
+              </a>
+
+              <a href="#">
+                <svg class="header-icons" width="32" height="32">
+                  <use
+                    href="./images/symbol-defs.svg#icon-ph_instagram-logo-light"
+                  ></use>
+                </svg>
+              </a>
             </div>
           </address>
         </div>
@@ -275,28 +266,32 @@
           </nav>
 
           <address class="footer-address">
-            <ul class="address-list-footer">
-              <li>
-                <a class="footer-address-link" href="tel:+380960000007"
-                  >+ 38 (096) 000 00 07</a
-                >
-              </li>
-              <li>
-                <a
-                  class="footer-address-link"
-                  href="mailto:beautyzone@gmail.com"
-                  >beautyzone@gmail.com</a
-                >
-              </li>
-              <li>
-                <a
-                  class="footer-address-link"
-                  href="https://maps.app.goo.gl/gM1DMYi7Mhi6iqHQ9"
-                  target="_blank"
-                  >Україна, м. Київ, вул. Тараса Шевченка 5</a
-                >
-              </li>
-              <li>
+            <div class="footer-contacts">
+              <ul class="address-list-footer">
+                <li>
+                  <a class="footer-address-link" href="tel:+380960000007"
+                    >+ 38 (096) 000 00 07</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="footer-address-link"
+                    href="mailto:beautyzone@gmail.com"
+                    >beautyzone@gmail.com</a
+                  >
+                </li>
+                <li>
+                  <a
+                    class="footer-address-link"
+                    href="https://maps.app.goo.gl/gM1DMYi7Mhi6iqHQ9"
+                    target="_blank"
+                    >Україна, м. Київ, <br />
+                    вул. Тараса Шевченка 5</a
+                  >
+                </li>
+              </ul>
+
+              <div class="footer-socials">
                 <a href="#">
                   <svg class="header-icons" width="32" height="32">
                     <use
@@ -305,8 +300,7 @@
                   </svg>
                 </a>
                 <!-- phone-icon -->
-              </li>
-              <li>
+
                 <a href="#">
                   <svg class="header-icons" width="32" height="32">
                     <use
@@ -315,8 +309,7 @@
                   </svg>
                 </a>
                 <!-- facebook-icon -->
-              </li>
-              <li>
+
                 <a href="#">
                   <svg class="header-icons" width="32" height="32">
                     <use
@@ -324,9 +317,10 @@
                     ></use>
                   </svg>
                 </a>
-                <!-- instagram-icon -->
-              </li>
-            </ul>
+              </div>
+            </div>
+            <!-- instagram-icon -->
+
             <div class="address-info">
               <a class="footer-address-link" target="_blank" href="#"
                 >Політика конфідеційності</a
