--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
         <div class="container">
           <p>Косметологічна клініка</p>
           <h1 class="hero-title">beauty zone</h1>
-          <button class="hero-button" type="button">Замовити дзвінок</button>
+          <button class="hero-button modal-btn-open" type="button">
+            Замовити дзвінок
+          </button>
           <p>
             Запишись та отримай безкоштовну <br />
             консультацію нашого косметолога
@@ -331,5 +333,11 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden">
+      <div class="modal">
+        <button class="modal-btn-close" type="button">Close</button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
