--- a/index.html
+++ b/index.html
@@ -76,20 +76,23 @@
       </section>
 
       <section class="advantages-section section" id="advantages-section">
-        <div class="container">
-          <h2 class="advantages-title">
-            Перевтілюйтесь в <span class="accent">beauty zone!</span>
-          </h2>
-          <p class="advantages-text">
-            Наша косметологічна клініка пропонує вам професійні послуги з
-            догляду за шкірою обличчя та тіла.
-          </p>
-          <p class="advantages-text">
-            B <span class="accent">Beauty Zone</span> ми гарантуємо найвищі
-            стандарти якості та приємний сервіс. Наші косметологічні процедури
-            та препарати допоможуть вам підтримувати свою красу та молодість. З
-            нами краса назавжди!
-          </p>
+        <div class="container advantages-container">
+          <div class="advantages-info">
+            <h2 class="advantages-title">
+              Перевтілюйтесь в <span class="accent">beauty zone!</span>
+            </h2>
+            <p class="advantages-text">
+              Наша косметологічна клініка пропонує вам професійні послуги з
+              догляду за шкірою обличчя та тіла.
+            </p>
+            <p class="advantages-text">
+              B <span class="accent">Beauty Zone</span> ми гарантуємо найвищі
+              стандарти якості та приємний сервіс. Наші косметологічні процедури
+              та препарати допоможуть вам підтримувати свою красу та молодість.
+              З нами краса назавжди!
+            </p>
+          </div>
+          <div class="advantages-photo"></div>
         </div>
       </section>
 
