--- a/index.html
+++ b/index.html
@@ -93,7 +93,31 @@
               З нами краса назавжди!
             </p>
           </div>
-          <div class="advantages-photo"></div>
+          <div class="advantages-photo">
+            <div class="stars">
+              <svg class="star-one">
+                <use
+                  href="./images/symbol-defs.svg#icon-Star-1"
+                  width="56"
+                  height="56"
+                ></use>
+              </svg>
+              <svg class="star-two">
+                <use
+                  href="./images/symbol-defs.svg#icon-Star-2"
+                  width="35"
+                  height="35"
+                ></use>
+              </svg>
+              <svg class="star-three">
+                <use
+                  href="./images/symbol-defs.svg#icon-Star-3"
+                  width="15"
+                  height="16"
+                ></use>
+              </svg>
+            </div>
+          </div>
         </div>
       </section>
 
